2000-12-06  Jim Meyering  <meyering@lucent.com>

	* xstrtoumax.m4 (jm_AC_PREREQ_XSTRTOUMAX): If we need the replacement
	strtoull, we may well need the replacement strtoul, too.
	Check for declarations of strtoul and strtoull.
	Check for strtol.  Mainly as a cue to cause automake to include
	strtol.c -- that file is included by each of strtoul.c and strtoull.c.
	Check for limits.h -- strtol.c needs it.

2000-12-02  Jim Meyering  <meyering@lucent.com>

	* off_t-format.m4 (OFF_T_PRINTF_FORMAT_STRING): New file/macro.
	* jm-macros.m4 (jm_MACROS): require it.

2000-11-30  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (jm_MACROS): Check for stdint.h.

2000-11-30  Jim Meyering  <meyering@lucent.com>

	* getloadavg.m4: s/ifval/m4_ifval/ to accommodate new autoconf.

2000-11-03  Bruno Haible  <haible@clisp.cons.org>

	* jm-macros.m4 (jm_MACROS): Add test for wcrtomb.

2000-11-04  Jim Meyering  <meyering@lucent.com>

	* regex.m4: Use the `m4_' prefix on `syscmd' and `m4_sysval'.

2000-10-29  Jim Meyering  <meyering@lucent.com>

	* fsusage.m4: s/AC_SHELL_IFELSE/AS_IFELSE/ to match autoconf renaming.
	* ls-mntd-fs.m4: Likewise

2000-10-28  Jim Meyering  <meyering@lucent.com>

	* prereq.m4 (jm_PREREQ): Add jm_PREREQ_MEMCHR.
	(jm_PREREQ_MEMCHR): New function.

2000-10-21  Jim Meyering  <meyering@lucent.com>

	* check-decl.m4 (jm_CHECK_DECLS): Also check for memrchr.
	* prereq.m4 (jm_PREREQ_DIRNAME): New macro.
	* jm-macros.m4 (AC_REPLACE_FUNCS): Add memrchr.

2000-09-18  Jim Meyering  <meyering@lucent.com>

	* getloadavg.m4 (AC_FUNC_GETLOADAVG): Restore the initial value of LIBS.
	Otherwise, everyone ends up linking with -lelf for some configurations.
	Reported by Mike Stone.

2000-08-26  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4: Use jm_FUNC_FPENDING.
	* fpending.m4: New file.

2000-08-20  Jim Meyering  <meyering@lucent.com>

	* check-decl.m4: Include utmp.h `#if HAVE_UTMP_H', rather than
	`#if !HAVE_UTMPX_H'.  The latter would lose on systems with neither